pass pi types from typia to zod
